<resources>
    <string name="app_name">EShop 卖家版</string>
    <string name="copyright">西安麦特赛尔软件技术有限公司 版权所有</string>
    <string name="sub_system_hr">HR系统</string>
    <string name="goods_on_shelves">热卖中</string>
    <string name="goods_off_shelves">已下架</string>
    <string name="shop_name">门店名称</string>
    <string name="shop_category">经营品类</string>
    <string name="shop_phone">餐厅电话</string>
    <string name="shop_address">餐厅地址</string>
    <string name="shop_qualification">营业资质</string>
    <string name="shop_status">营业状态</string>
    <string name="shop_work_time">营业时间</string>
    <string name="shop_ad_images">宣传图片</string>
    <string name="goods_to_shelves">待上架</string>

    <string name="login">登录</string>
    <string name="loading">正在加载 ...</string>
    <string name="tip_input_company">请输入公司名称</string>
    <string name="tip_input_account">请输入您的手机号s</string>
    <string name="tip_input_password">请输入您的密码</string>
    <string name="tip_register_password">请输入6位以上密码</string>
    <string name="tip_input_email">请输入您的邮箱</string>
    <string name="tip_input_validation_code">请输入您的验证码</string>
    <string name="copyright">西安麦特赛尔软件技术有限公司 版权所有</string>
    <string name="logout">退出登录</string>
    <string name="start_price">&#165;%1$.2f 起</string>
    <string name="value_price">&#165;%1$.2f</string>
    <string name="goods_price">&#165;%1$.2f</string>
    <string name="food_lunch">午餐</string>
    <string name="food_home_cooking">家常菜</string>
    <string name="food_porridge_shop">包子粥铺</string>
    <string name="food_japanese_korean_cuisine">日韩料理</string>
    <string name="text_other">其他</string>
    <string name="text_introduction">简介</string>
    <string name="text_goods">商品</string>
    <string name="text_settlement">结算</string>
    <string name="text_all_choose">全选</string>
    <string name="text_to_delivery">待发货</string>
    <string name="text_to_payment">待付款</string>
    <string name="text_to_receive">待收货</string>
    <string name="text_completed">已完成</string>
    <string name="text_user_cancel">用户取消</string>
    <string name="text_timeout_cancel">超时取消</string>
    <string name="order_cancel_alert">订单将在24小时后自动取消</string>
    <string name="text_modify">修改</string>
    <string name="text_to_handle">待处理</string>
    <string name="text_delivered">已配送</string>
</resources>
